<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/profile_activity"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/share"
            android:enabled="true"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/sign_out"
            android:enabled="true"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/delete"
            android:enabled="true"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_profile"
            app:showAsAction="ifRoom"/>
</menu>