<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/main_fragment"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/explore_fragment"
            android:enabled="true"
            android:icon="@drawable/ic_public"
            android:title="@string/explore"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/profile_fragment"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile"
            app:showAsAction="ifRoom"/>

</menu>